--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -5,20 +5,22 @@ if (hasProperty("env")) {
 
 ext.env = ext.environment
 ext.isProd = { env ->
-    return "prod".equals(env.toString()) || "production".equals(env.toString()) ||
-            "product".equals(env.toString()) || "docker".equals(env.toString())
+//    return "prod".equals(env.toString()) || "production".equals(env.toString()) ||
+//            "product".equals(env.toString())
+    return env.toString().contains("prod")
 }
 
-ext.isTestServer = { env ->
-    return "test".equals(env.toString()) || "testdocker".equals(env.toString())
+ext.isTest = { env ->
+    return env.toString().contains("test")
+//    return "test".equals() || "testdocker".equals(env.toString())
 }
 
 ext.isDocker = {
-    env -> return "docker".equals(env.toString()) || "testdocker".equals(env.toString())
+    env -> return env.toString().contains("docker")
 }
 
 ext.isDev = {
-    return !isProd(env) && !isTestServer(env)
+    return !isProd(env) && !isTest(env)
 }
 
 
