--- a/flycat-springboot/settings.gradle
+++ b/flycat-springboot/settings.gradle
@@ -10,8 +10,8 @@ project(':flycat-springboot-security').projectDir = new File('./flycat-springboo
 include 'flycat-springboot-app'
 project(':flycat-springboot-app').projectDir = new File('./flycat-springboot/flycat-app')
 
-include 'flycat-springboot-sba'
-project(':flycat-springboot-sba').projectDir = new File('./flycat-springboot/flycat-sba')
+//include 'flycat-springboot-sba'
+//project(':flycat-springboot-sba').projectDir = new File('./flycat-springboot/flycat-sba')
 
 include 'flycat-springboot-mybatis'
 project(':flycat-springboot-mybatis').projectDir = new File('./flycat-springboot/flycat-mybatis')
