--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -15,8 +15,20 @@ ext.isTest = { env ->
 //    return "test".equals() || "testdocker".equals(env.toString())
 }
 
-ext.isDocker = {
-    env -> return env.toString().contains("docker")
+//ext.isDocker = {
+//    env -> return env.toString().contains("docker")
+//}
+
+
+
+ext.isDockerBuild = {
+    def executeDockerBuild = false
+    def executingTasks = project.gradle.startParameter.taskNames
+    if (executingTasks != null && !executingTasks.isEmpty()) {
+        executeDockerBuild = 'jib' in executingTasks
+                || 'jibDockerbuild' in executingTasks
+    }
+    return executeDockerBuild
 }
 
 ext.isDev = {
@@ -31,6 +43,15 @@ if (executingTasks == null || executingTasks.isEmpty()
         || 'compileJava' in executingTasks) {
     ignoredEnv = true
 }
+
+
+//if (executingTasks == null || executingTasks.isEmpty()
+//        || 'jib' in executingTasks
+//        || 'jibDockerbuild' in executingTasks) {
+//    if (!hasProperty("deployType")) {
+//        throw new java.lang.RuntimeException("Need deployType arguments")
+//    }
+//}
 
 println "Executing ${project.gradle.startParameter.taskNames}, ignoredEnv $ignoredEnv"
 
