--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -98,7 +98,7 @@ task updateClassesFiles() {
 apply plugin: 'idea'
 idea {
     //    pathVariables GRADLE_HOME: file("$buildDir")
-    println("build dir $buildDir")
+//    println("build dir $buildDir")
     module {
         inheritOutputDirs = false
         outputDir = file("$buildDir/classes/java/main")
