--- a/deploy/docker/prod/traefik.toml
+++ b/deploy/docker/prod/traefik.toml
@@ -27,7 +27,7 @@ maxMem = 3
 endpoint = "unix:///var/run/docker.sock"
 watch = true
 exposedByDefault = false
-network = "webgateway_traefik"
+network = "flycat_infra"
 
 [providers]
    # Enable the file provider to define routers / middlewares / services in a file
