--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -20,16 +20,40 @@ ext.isTest = { env ->
 //}
 
 
-
-ext.isDockerBuild = {
-    def executeDockerBuild = false
+ext.isRunTask = { tasks ->
     def executingTasks = project.gradle.startParameter.taskNames
     if (executingTasks != null && !executingTasks.isEmpty()) {
-        executeDockerBuild = 'jib' in executingTasks
-                || 'jibDockerbuild' in executingTasks
+        for(item in tasks) {
+            if (item in executingTasks) {
+                return true
+            }
+        }
     }
-    return executeDockerBuild
+    return false
 }
+
+ext.isDockerBuild = {
+//    def executeDockerBuild = false
+//    def executingTasks = project.gradle.startParameter.taskNames
+//    if (executingTasks != null && !executingTasks.isEmpty()) {
+//        executeDockerBuild = 'jib' in executingTasks
+//                || 'jibDockerbuild' in executingTasks
+//    }
+//    return executeDockerBuild
+    return isRunTask(['jib', 'jibDockerbuild'])
+}
+
+ext.isRunUnitTest = {
+//    def executeDockerBuild = false
+//    def executingTasks = project.gradle.startParameter.taskNames
+//    if (executingTasks != null && !executingTasks.isEmpty()) {
+//        executeDockerBuild = 'jib' in executingTasks
+//                || 'jibDockerbuild' in executingTasks
+//    }
+//    return executeDockerBuild
+    return isRunTask(['test', ':test'])
+}
+
 
 ext.isDev = {
     return !isProd(env) && !isTest(env)
