--- a/deploy/docker/common/docker-compose.mysql.yml
+++ b/deploy/docker/common/docker-compose.mysql.yml
@@ -1,20 +1,24 @@
 version: '3'
 services:
   db:
-    container_name: "db_mysql"
-    platform: linux/x86_64
-    image: hub-mirror.c.163.com/library/mysql:5.7
+    container_name: "db-mysql"
+#    platform: linux/x86_64
+    image: mysql:8.0.31
     restart: always
     volumes:
-      - ~/data/mysql:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ~/deploy/data/mysql8:/var/lib/mysql
+      - ./mysql-initdb:/docker-entrypoint-initdb.d
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     networks:
       - infra
     environment:
-#      MYSQL_USER: 'root'
-      MYSQL_ROOT_PASSWORD: 'roow'
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_TCP_PORT: ${MYSQL_PORT}
     ports:
-      - '3306:3306'
+      - '${MYSQL_PORT}:${MYSQL_PORT}'
 
 networks:
   infra:
